tests/ui/async-await/async-fn/closure-arg-type-mismatch.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:7:5
   |
LL |     foo(|_: i32| async {});
   |     ^^^^--------^^^^^^^^^^
   |     |   |
   |     |   found signature defined here
   |     expected due to this
   |
   = note: expected closure signature `for<'a> fn(&'a mut _) -> _`
              found closure signature `fn(_) -> _`
note: required by a bound in `foo`
  --> $DIR/closure-arg-type-mismatch.rs:4:16
   |
LL | fn foo(_: impl AsyncFn(&mut i32)) {}
   |                ^^^^^^^^^^^^^^^^^ required by this bound in `foo`
help: consider adjusting the signature so it borrows its argument
   |
LL |     foo(|_: &mut i32| async {});
   |             ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0631`.
